--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,12 +71,14 @@ a{
 section{
     text-align: center;
     padding-top: 70px;
+    display: flow-root;
 }
 .item-container{
     width: 200px;
     color: #fff;
     display: inline-block;
     margin: 40px;
+    text-align: -webkit-center;
 }
 .item-frame{
     position: absolute;
@@ -147,4 +149,68 @@ footer{
     padding: 30px 0px 20px 0px;
     text-align: center;
     color: #777;
+}
+
+
+/* UPLOAD */
+.upload-section{
+    display: block;
+}
+#upload-img-container{
+    text-align: -webkit-center;
+    margin-left: 20px;
+    display: inline-block;
+}
+#upload-img{
+    width: 500px;
+    height: 500px;
+    object-fit: contain;
+}
+input[type="file"]{
+    color: #fff;
+}
+#upload-caption{
+    display: inline-block;
+    margin-left: 60px;
+    margin-right: 60px;
+    vertical-align: bottom;
+}
+#upload-title-container{
+    font-family: 'nanummyeongjo', sans;
+    margin-top: 100px;
+    font-size: 22pt;
+    color: #fff;
+    display: flex;
+}
+#upload-title{
+    width: 300px;
+    height: 30px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-family: 'nanummyeongjo', sans;
+    font-size: 16pt;
+    border-style: none;
+    border-radius: 5px;
+    margin-left: 30px;
+}
+#upload-author-container{
+    font-family: 'nanummyeongjo', sans;
+    margin-top: 30px;
+    font-size: 22pt;
+    color: #fff;
+    display: flex;
+}
+#upload-btn{
+    width: 400px;
+    height: 35px;
+    margin-top: 200px;
+    border-radius: 25px;
+    border: 0px;
+    background-color: #aaa;
+    font-size: 15pt;
+    font-weight: 700;
+    vertical-align: middle;
+}
+#upload-btn:hover{
+    background-color: #ddd;
 }
