--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,4 +1,5 @@
 <% include ../common/index-top.ejs %>
+      <section>
 <% for (var i=0; i<2; i++){ %>
         <a href="/">
           <div class="item-container">
@@ -20,4 +21,5 @@
         <a href="/">
           <div id="more"> MORE... </div>
         </a>
+      </section>
 <% include ../common/index-bottom.ejs %>
