--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
-@import url(//fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+@import url(https://fonts.googleapis.com/css?family=Nanum+Myeongjo);
+
 html{
     height: auto;
 }
@@ -123,14 +124,14 @@ section{
     margin: 15px;
 }
 .item-title{
-    font-family: 'nanummyeongjo', sans;
+    font-family: 'Nanum Myeongjo', sans;
     font-size: 15pt;
     font-weight: 700;
     line-height: 2;
 }
 .item-author{
     color: #aaa;
-    font-family: 'nanummyeongjo', sans;
+    font-family: 'Nanum Myeongjo', sans;
     text-align: right;
     font-size: 11pt;
 }
@@ -176,7 +177,7 @@ input[type="file"]{
     vertical-align: bottom;
 }
 #upload-title-container{
-    font-family: 'nanummyeongjo', sans;
+    font-family: 'Nanum Myeongjo', sans;
     margin-top: 100px;
     font-size: 22pt;
     color: #fff;
@@ -187,14 +188,14 @@ input[type="file"]{
     height: 30px;
     padding-left: 8px;
     padding-right: 8px;
-    font-family: 'nanummyeongjo', sans;
+    font-family: 'Nanum Myeongjo', sans;
     font-size: 16pt;
     border-style: none;
     border-radius: 5px;
     margin-left: 30px;
 }
 #upload-author-container{
-    font-family: 'nanummyeongjo', sans;
+    font-family: 'Nanum Myeongjo', sans;
     margin-top: 30px;
     font-size: 22pt;
     color: #fff;
