--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,22 +1,17 @@
 <% include ../common/index-top.ejs %>
       <section>
 <% for (var i=0; i<2; i++){ %>
+
+<% for (var j=1; j<7; j++){ %>
         <a href="/">
           <div class="item-container">
-            <img src="images/frame1.png" alt="mypage" class="item-frame"/>
-            <img src="images/img.png" alt="mypage" class="item-img item-img1"/>
-            <div class="item-title">제목</div>
-            <div class="item-author">-탱커</div>
+            <img src="images/frame<%=j%>.png" alt="mypage" class="item-frame"/>
+            <img src="images/img-small.png" alt="mypage" class="item-img item-img<%=j%>"/>
+            <div class="item-title">학교가는 박부부</div>
+            <div class="item-author">-김탱커</div>
           </div>
         </a>
-        <a href="/">
-          <div class="item-container">
-            <img src="images/frame6.png" alt="mypage" class="item-frame"/>
-            <img src="images/img.png" alt="mypage" class="item-img item-img6"/>
-            <div class="item-title">웅냥냥</div>
-            <div class="item-author">-뿌뿌</div>
-          </div>
-        </a>
+        <% } %>
 <% } %>
         <a href="/">
           <div id="more"> MORE... </div>
