사진 자세히 보기 화면 구성

--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -3,7 +3,7 @@
 <% for (var i=0; i<2; i++){ %>
 
 <% for (var j=1; j<7; j++){ %>
-        <a href="/">
+        <a href="/detail?no=12">
           <div class="item-container">
             <img src="images/frame<%=j%>.png" alt="mypage" class="item-frame"/>
             <img src="images/img-small.png" alt="mypage" class="item-img item-img<%=j%>"/>
