--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -215,3 +215,37 @@ input[type="file"]{
 #upload-btn:hover{
     background-color: #ddd;
 }
+
+/* detail */
+.detail-img{
+    width: 100%;
+    min-height: 100px;
+    max-height: 500px;
+    object-fit: contain;
+}
+.detail-title{
+    display: flex;
+    margin-top: 20px;
+    margin-left: 30px;
+    font-family: 'Nanum Myeongjo', sans;
+    font-size: 20pt;
+    font-weight: 800;
+    color: #fff;
+}
+.detail-author{
+    display: inline-flex;
+    float: left;
+    margin-top: 10px;
+    margin-left: 40px;
+    font-family: 'Nanum Myeongjo', sans;
+    font-size: 15pt;
+    color: #aaa;
+}
+.detail-views{
+    display: inline-flex;
+    float: right;
+    margin-top: 10px;
+    margin-right: 20px;
+    font-size: 12pt;
+    color: #fff;
+}
