이미지 DB 스키마 생성 및 업로드, 상세보기에서 연결

--- a/views/detail/index.ejs
+++ b/views/detail/index.ejs
@@ -1,8 +1,8 @@
 <% include ../common/index-top.ejs %>
 <section>
-    <img src="images/img.png" alt="mypage" class="detail-img"/>
-    <div class="detail-title">학교가는 박부부</div>
-    <span class="detail-author">-김탱커</span>
-    <span class="detail-views">2k views</span>
+    <img src="uploads/<%= img %>" alt="mypage" class="detail-img"/>
+    <div class="detail-title"><%= title %></div>
+    <span class="detail-author">-<%= author %></span>
+    <span class="detail-views"><%= views %> views</span>
 </section>
 <% include ../common/index-bottom.ejs %>
