상세보기에 날짜 표기. 메인에 최신순 나열

--- a/views/detail/index.ejs
+++ b/views/detail/index.ejs
@@ -4,5 +4,7 @@
     <div class="detail-title"><%= title %></div>
     <span class="detail-author">-<%= author %></span>
     <span class="detail-views"><%= views %> views</span>
+    <br/><br/>
+    <div class="detail-date"><%= date %></div>
 </section>
 <% include ../common/index-bottom.ejs %>
