--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,6 +128,8 @@ section{
     font-size: 15pt;
     font-weight: 700;
     line-height: 2;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .item-author{
     color: #aaa;
@@ -146,7 +148,7 @@ section{
 }
 footer{
     width: 100%;
-    margin-top: 30px;
+    margin-top: 120px;
     padding: 30px 0px 20px 0px;
     text-align: center;
     color: #777;
@@ -247,5 +249,13 @@ input[type="file"]{
     margin-top: 10px;
     margin-right: 20px;
     font-size: 12pt;
-    color: #fff;
+    color: #606060;
+}
+.detail-date{
+    display: flex;
+    float: right;
+    margin-top: 10px;
+    margin-right: 20px;
+    font-size: 10pt;
+    color: #555;
 }
