--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,6 +145,7 @@ section{
     border-radius: 20px;
     margin-left: 50px;
     margin-right: 50px;
+    cursor: pointer;
 }
 footer{
     width: 100%;
