--- a/views/common/index-top.ejs
+++ b/views/common/index-top.ejs
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>	
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
     <link href="images/favicon/favicon.ico" rel="icon" type="image/x-icon" />
     <meta name="theme-color" content="#000000" />
