--- a/views/common/index-top.ejs
+++ b/views/common/index-top.ejs
@@ -20,7 +20,7 @@
         <button type="button" id="upload" onclick="location.href='/upload';"><img src="images/plus.png" alt="Logo"/><span>Upload</span></button>
         <!-- 마이페이지 -->
         <a href="/"><img src="images/user.png" alt="mypage" id="mypage"/></a>
-        <a href="/" id="login">logout</a>
+        <a href="/logout" id="login">logout</a>
       </header>
       <% } else { %>
         <a style="cursor: pointer;" id="login">login</a>
