--- a/views/upload/index.ejs
+++ b/views/upload/index.ejs
@@ -8,7 +8,7 @@
   <form action="/upload_img" method="post" enctype="multipart/form-data">
     <div id="upload-img-container">
       <img id="upload-img" alt="uploaded" src="images/img.png"/><br/>
-      <input type="file" name="upload_file" accept=".jpg, .png, .gif" required>
+      <input type="file" name="upload_file" accept="image/*" required>
     </div>
     <div id="upload-caption">
       <div id="upload-title-container">
