--- a/views/common/index-top.ejs
+++ b/views/common/index-top.ejs
@@ -12,40 +12,91 @@
     <title>Gallery's Gallery</title>
   </head>
   <body>
-    <header>
-      <a href="/"><img src="images/logo.png" alt="Logo" id="logo"/></a>
-      <!-- 검색 -->
-      <% if(id){ %>
-        <!-- 업로드 버튼 -->
-        <button type="button" id="upload" onclick="location.href='/upload';"><img src="images/plus.png" alt="Logo"/><span>Upload</span></button>
-        <!-- 마이페이지 -->
-        <a href="/"><img src="images/user.png" alt="mypage" id="mypage"/></a>
-        <a href="/logout" id="login">logout</a>
-      </header>
-      <% } else { %>
-        <a style="cursor: pointer;" id="login">login</a>
-      </header>
-      <div id="login-box" class="hidden">
-        <form action="/login" method="POST">
-          <table>
-            <tr>
-              <td> ID </td>
-              <td> <input type="text" name="gg_id"/> </td>
-              <td rowspan="2"> <input type="submit" value="login"/> </td>
-            </tr>
-            <tr>
-              <td> PW </td>
-              <td> <input type="password" name="gg_pw"/> </td>
-            </tr>
-          </table>
-        </form>
-      </div>
-      <script>
-        $(document).ready(function(){
-          $('#login').click(function(e){
-            e.preventDefault();
-            $('#login-box').toggleClass('hidden');
+    <div class="desktop">
+      <header>
+        <a href="/"><img src="images/logo.png" alt="Logo" id="logo"/></a>
+        <!-- 검색 -->
+        <% if(id){ %>
+          <!-- 업로드 버튼 -->
+          <button type="button" id="upload" onclick="location.href='/upload';"><img src="images/plus.png" alt="Logo"/><span>Upload</span></button>
+          <!-- 마이페이지 -->
+          <a href="/"><img src="images/user.png" alt="mypage" id="mypage"/></a>
+          <a href="/logout" id="login">logout</a>
+        </header>
+        <% } else { %>
+          <a style="cursor: pointer;" id="login">login</a>
+        </header>
+        <div id="login-box" class="hidden">
+          <form action="/login" method="POST">
+            <table>
+              <tr>
+                <td> ID </td>
+                <td> <input type="text" name="gg_id"/> </td>
+                <td rowspan="2"> <input type="submit" value="login"/> </td>
+              </tr>
+              <tr>
+                <td> PW </td>
+                <td> <input type="password" name="gg_pw"/> </td>
+              </tr>
+            </table>
+          </form>
+        </div>
+        <script>
+          $(document).ready(function(){
+            $('#login').click(function(e){
+              e.preventDefault();
+              $('#login-box').toggleClass('hidden');
+            })
           })
-        })
-      </script>
-      <% } %>
+        </script>
+        <% } %>
+    </div>
+    <div class='mobile'>
+      <header>
+        <a><img src="images/key.png" alt="Logo" id="mobile-search"/></a>
+        <a href="/"><img src="images/logo.png" alt="Logo" id="mobile-logo"/></a>
+        <% if(id){ %>
+        <div id="mobile-menu-arrow"></div>
+        </header>
+        <div id="mobile-menu" style="display: none;">
+            <div id="mobile-mypage" onclick="location.href='/mypage'"></div>
+            <div id="mobile-upload" onclick="location.href='/upload'"></div>
+            <div id="mobile-logout" onclick="location.href='/logout'"></div>
+        </div>
+        <script>
+          $(document).ready(function(){
+            $('#mobile-menu-arrow').click(function(e){
+              e.preventDefault();
+              $('#mobile-menu').slideToggle(200);
+              $('#mobile-menu-arrow').toggleClass('mobile-menu-arrow-up');
+            })
+          })
+        </script>
+        <% } else { %>
+        <a style="cursor: pointer;"><img src="images/key.png" alt="login" id="mobile-key"/></a>
+        </header>
+        <div id="mobile-login-box" class="hidden">
+          <form action="/login" method="POST">
+            <table>
+              <tr>
+                <td> ID </td>
+                <td> <input type="text" name="gg_id"/> </td>
+                <td rowspan="2"> <input type="submit" value="login"/> </td>
+              </tr>
+              <tr>
+                <td> PW </td>
+                <td> <input type="password" name="gg_pw"/> </td>
+              </tr>
+            </table>
+          </form>
+        </div>
+        <script>
+          $(document).ready(function(){
+            $('#mobile-key').click(function(e){
+              e.preventDefault();
+              $('#mobile-login-box').toggleClass('hidden');
+            })
+          })
+        </script>
+        <% } %>
+    </div>
