모바일 업로드 화면 css 추가

--- a/views/upload/index.ejs
+++ b/views/upload/index.ejs
@@ -15,9 +15,8 @@
         Title
         <input type="text" name="upload_title" id="upload-title" required minlength="1" maxlength="20" size="10"/>
       </div>
-      <div id="upload-author-container">
-          Author &nbsp;&nbsp;
-          <span style="font-size:16pt;line-height: 40px;"><%= name %></span>
+      <div id="upload-author-container">Author 
+          <span style="font-size:16pt;line-height: 40px;margin-left: 30px;"><%= name %></span>
       </div>
       <input type="submit" id="upload-btn" value="Upload"/>
     </div>
