--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -319,19 +319,60 @@ footer{
     margin-left: 20px;
     display: inline-block;
 }
-#upload-img{
-    width: 500px;
-    height: 500px;
-    object-fit: contain;
+
+/* upload mobile/desktop */
+@media (max-width: 570px) {
+    #upload-img{
+        width: 100%;
+        max-height: 500px;
+        min-height: 100px;
+        object-fit: contain;
+    }
+    #upload-caption{
+        /* display: inline-block; */
+        margin-left: 60px;
+        margin-right: 60px;
+        vertical-align: bottom;
+    }
+    #upload-btn{
+        width: 100%;
+        height: 35px;
+        margin-top: 200px;
+        border-radius: 25px;
+        border: 0px;
+        background-color: #aaa;
+        font-size: 15pt;
+        font-weight: 700;
+        vertical-align: middle;
+    }
+}
+@media (min-width: 571px) {
+    #upload-img{
+        width: 500px;
+        height: 500px;
+        object-fit: contain;
+    }
+    #upload-caption{
+        display: inline-block;
+        margin-left: 60px;
+        margin-right: 60px;
+        vertical-align: bottom;
+    }
+    #upload-btn{
+        width: 400px;
+        height: 35px;
+        margin-top: 200px;
+        border-radius: 25px;
+        border: 0px;
+        background-color: #aaa;
+        font-size: 15pt;
+        font-weight: 700;
+        vertical-align: middle;
+        -webkit-appearance: none;
+    }
 }
 input[type="file"]{
     color: #fff;
-}
-#upload-caption{
-    display: inline-block;
-    margin-left: 60px;
-    margin-right: 60px;
-    vertical-align: bottom;
 }
 #upload-title-container{
     font-family: 'Nanum Myeongjo', sans;
@@ -357,17 +398,6 @@ input[type="file"]{
     font-size: 22pt;
     color: #fff;
     display: flex;
-}
-#upload-btn{
-    width: 400px;
-    height: 35px;
-    margin-top: 200px;
-    border-radius: 25px;
-    border: 0px;
-    background-color: #aaa;
-    font-size: 15pt;
-    font-weight: 700;
-    vertical-align: middle;
 }
 #upload-btn:hover{
     background-color: #ddd;
