--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -411,13 +411,26 @@ input[type="file"]{
     object-fit: contain;
 }
 .detail-title{
-    display: flex;
+    display: block;
     margin-top: 20px;
     margin-left: 30px;
     font-family: 'Nanum Myeongjo', sans;
     font-size: 20pt;
     font-weight: 800;
     color: #fff;
+    text-align: left;
+}
+.detail-kakao{
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    background-image: url(/images/kakao.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
 }
 .detail-author{
     display: inline-flex;
