--- a/views/detail/index.ejs
+++ b/views/detail/index.ejs
@@ -6,5 +6,25 @@
     <span class="detail-views"><%= views %> views</span>
     <br/><br/>
     <div class="detail-date"><%= date %></div>
+    <div class="detail-kakao"></div>
 </section>
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+<script>
+    $(document).ready(function(){
+        Kakao.init('80ea35a972df953e1b7aa1449f4abce6');
+        Kakao.Link.createDefaultButton({
+        container: '.detail-kakao',
+        objectType: 'feed',
+        content: {
+            title: '<%= title %>',
+            description: '-<%= author %>',
+            imageUrl: 'http://5582432b.ngrok.io/uploads/<%= img %>',
+            link: {
+                mobileWebUrl: location.href,
+                webUrl: location.href
+            }
+        }
+        });
+    });
+</script>
 <% include ../common/index-bottom.ejs %>
