--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -223,6 +223,18 @@ td input[type="submit"]{
 a{
     text-decoration: none;
 }
+.filter{
+    position: absolute;
+    top: 75px;
+    left: 20px;
+    color: #666;
+}
+.filter span{
+    cursor: pointer;
+}
+.selected-filter{
+    color: #fff;
+}
 section{
     text-align: center;
     padding-top: 70px;
