--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -22,7 +22,7 @@
         return 1;
       return 0;
     }
-    var images_r = images;
+    var images_r = images.slice();
     var images_p = images.sort(compare);
 
     $(document).ready(function() {
@@ -50,12 +50,12 @@
         });
 
         // filter
-        $('#recent').click(function(){
-          if(!$('#recent').hasClass('selected')){
+        $('#recent').click(function(e){
+          if(!$('#recent').hasClass('selected-filter')){
             //  기존 사진 제거
             $('section a').remove();
             // 새로운 8개 사진 대입
-            images = images_r;
+            images = images_r.slice();
             last = 0;
             $('#more').click();
             // selected class 변경
@@ -64,11 +64,11 @@
           }
         });
         $('#popular').click(function(){
-          if(!$('#popular').hasClass('selected')){
+          if(!$('#popular').hasClass('selected-filter')){
             //  기존 사진 제거
             $('section a').remove();
             // 새로운 8개 사진 대입
-            images = images_p;
+            images = images_p.slice();
             last = 0;
             $('#more').click();
             // selected class 변경
