--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -506,6 +506,12 @@ input[type="file"]{
     color: white;
     -webkit-appearance: none;
 }
+#comment-no{
+    font-family: 'Nanum Myeongjo', sans;
+    font-size: 16px;
+    color: white;
+    margin-top: 30px;
+}
 #comments table{
     width: 90%;
     color: white;
@@ -515,12 +521,13 @@ input[type="file"]{
 .comment-content{
     font-family: 'Nanum Myeongjo', sans;
     font-size: 16px;
+    padding-bottom: 5px;
 }
 .comment-info{
     font-family: 'Nanum Myeongjo', sans;
     font-size: 14px;
     color: #999;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 .comment-info span{
     font-size: 11px;
