모바일 버튼 추가

--- a/views/common/index-top.ejs
+++ b/views/common/index-top.ejs
@@ -67,9 +67,9 @@
         <div id="mobile-menu-arrow"></div>
         </header>
         <div id="mobile-menu" style="display: none;">
-            <div id="mobile-mypage" onclick="location.href='/mypage'"></div>
-            <div id="mobile-upload" onclick="location.href='/upload'"></div>
-            <div id="mobile-logout"></div>
+            <div id="mobile-mypage" class="mobile-btn" onclick="location.href='/mypage'"></div>
+            <div id="mobile-upload" class="mobile-btn" onclick="location.href='/upload'"></div>
+            <div id="mobile-logout" class="mobile-btn"></div>
         </div>
         <script>
           $(document).ready(function(){
