--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,43 +92,31 @@ body{
 }
 #mobile-menu{
     width: 100%;
-    height: 70px;
+    height: 60px;
+    text-align: center;
     position: fixed;
     z-index: 1;
     top: 70px;
     background-color: #333;
 }
-#mobile-mypage{
-    width: 50px;
-    height: 70px;
+.mobile-btn{
+    width: 40px;
+    height: 100%;
     cursor: pointer;
     display: inline-block;
-    background-image: url(/images/user.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    margin-left: 30px;
+}
+#mobile-mypage{
+    background-image: url(/images/user.png);
 }
 #mobile-upload{
-    width: 50px;
-    height: 70px;
-    cursor: pointer;
-    display: inline-block;
-    background-image: url(/images/user.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-image: url(/images/upload.png);
     margin-left: 30px;
 }
 #mobile-logout{
-    width: 50px;
-    height: 70px;
-    cursor: pointer;
-    display: inline-block;
-    background-image: url(/images/user.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-image: url(/images/logout.png);
     margin-left: 30px;
 }
 header{
@@ -329,7 +317,6 @@ footer{
 }
 #upload-img-container{
     text-align: -webkit-center;
-    margin-left: 20px;
     display: inline-block;
 }
 
@@ -386,6 +373,7 @@ footer{
 }
 input[type="file"]{
     color: #fff;
+    margin-top: 10px;
 }
 #upload-title-container{
     font-family: 'Nanum Myeongjo', sans;
