--- a/views/upload/index.ejs
+++ b/views/upload/index.ejs
@@ -7,7 +7,7 @@
 <section class="upload-section">
   <form action="/upload_img" method="post" enctype="multipart/form-data">
     <div id="upload-img-container">
-      <img id="upload-img" alt="uploaded" src="images/img.png"/><br/>
+      <img id="upload-img" alt="uploaded" src="images/default.png"/><br/>
       <input type="file" name="upload_file" accept="image/*" required>
     </div>
     <div id="upload-caption">
