--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -6,7 +6,11 @@
         <div class="item-container">
           <img src="images/frame<%= images[i].frame_num %>.png" alt="frame" class="item-frame"/>
           <img src="uploads/small/<%= images[i].file_name %>" alt="pic" class="item-img item-img<%= images[i].frame_num %>"/>
-          <div class="item-title"><%= images[i].title%></div>
+          <div class="item-title"><%= images[i].title%>
+            <% if (images[i].comment_num != 0 ) { %>
+              <span>(<%= images[i].comment_num %>)</span>
+            <% } %>
+          </div>
           <div class="item-author">-<%= images[i].author %></div>
         </div>
       </a>
@@ -32,12 +36,14 @@
             let how = images.length-last>8 ? 8 : images.length-last;
             let i = last;
             for(; i<last + how; i++){
+              let cmt_str = ` <span>(${images[i].comment_num})</span>`;
+              if( images[i].comment_num == 0 ) cmt_str = '';
               $('#more').before('<a href="/detail?no=' + images[i].no 
                 + '"><div class="item-container"><img src="images/frame' 
                 + images[i].frame_num + '.png" alt="frame" class="item-frame"/><img src="uploads/small/'
                 + images[i].file_name + '" alt="pic" class="item-img item-img' 
                 + images[i].frame_num + '"/><div class="item-title">' 
-                + images[i].title + '</div><div class="item-author">-' 
+                + images[i].title + cmt_str + '</div><div class="item-author">-' 
                 + images[i].author + '</div></div></a>');
             }
             last = i;
